--- a/apache-tomcat-8.0.47/webapps/proyecto/WEB-INF/web.xml
+++ b/apache-tomcat-8.0.47/webapps/proyecto/WEB-INF/web.xml
@@ -109,7 +109,7 @@
       configurartion for the web application.
     </description>
     <res-ref-name>
-      jdbc/Libros
+      jdbc/Users
     </res-ref-name>
     <res-type>
       javax.sql.DataSource
